--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ cffi==1.14.1
 decorator==4.4.2
 defusedxml==0.6.0
 entrypoints==0.3
+future==0.18.2
 importlib-metadata==1.7.0
 ipykernel==5.3.4
 ipython==7.17.0
@@ -45,6 +46,8 @@ Send2Trash==1.5.0
 six==1.15.0
 terminado==0.8.3
 testpath==0.4.4
+torch==1.6.0
+torchvision==0.7.0
 tornado==6.0.4
 traitlets==4.3.3
 wcwidth==0.2.5
