--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,13 @@ attrs==19.3.0
 backcall==0.2.0
 bleach==3.1.5
 cffi==1.14.1
+cycler==0.10.0
 decorator==4.4.2
 defusedxml==0.6.0
 entrypoints==0.3
 future==0.18.2
 importlib-metadata==1.7.0
+imshow==0.0.3
 ipykernel==5.3.4
 ipython==7.17.0
 ipython-genutils==0.2.0
@@ -19,7 +21,9 @@ jupyter==1.0.0
 jupyter-client==6.1.6
 jupyter-console==6.1.0
 jupyter-core==4.6.3
+kiwisolver==1.2.0
 MarkupSafe==1.1.1
+matplotlib==3.3.0
 mistune==0.8.4
 nbconvert==5.6.1
 nbformat==5.0.7
